objects/Compensation_Estimator__c.object
<CustomObject>
    <description>Allows sales users eligible for incentive compensation to simulate calculations</description>
    <fields>
        <fullName>Actual_Persistency__c</fullName>
        <label>Actual Persistency</label>
        <summarizedField>Compensation_Estimator_Goal__c.Actual_Persistency__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Year-End Persistency</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Goal__c.Estimation_Summary__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dental_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to include Dental in the estimate</inlineHelpText>
        <label>Dental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disability_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disclaimers__c</fullName>
        <label>Disclaimers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business Renewal Notes</fullName>
                    <label>Select HERE to review New Business &amp; Renewal Notes (then expand the arrow to the left)</label>
                </value>
                <value>
                    <fullName>Year-End Persistency Bonus Payout Table</fullName>
                    <label>Select HERE to review the Year-End Persistency Bonus Payout Table</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to include Medical in the estimate</inlineHelpText>
        <label>Medical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Renewals_at_Risk__c</fullName>
        <formula>Renewal_Medical_Commission__c * 0.2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Your target persistency bonus payout is 20% of Medical Renewals commissions.  Your ACTUAL payout is a percentage of your target times your persistency.  See the table above for the ranges.</inlineHelpText>
        <label>Medical Renewals at Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Bus_Dental_Goal_Eligible_Amount__c</fullName>
        <label>New Bus Dental  Goal Eligible Amount</label>
        <summarizedField>Compensation_Estimator_Product__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Bus_Disability_Goal_Eligible_Amount__c</fullName>
        <label>New Bus Disability Goal Eligible Amount</label>
        <summarizedField>Compensation_Estimator_Product__c.Total_Premium__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Disability</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Goal_Eligible__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Bus_Life_Goal_Eligible_Amount__c</fullName>
        <label>New Bus Life Goal Eligible Amount</label>
        <summarizedField>Compensation_Estimator_Product__c.Total_Premium__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Life</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Goal_Eligible__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Bus_Medical_Goal_Eligible_Amount__c</fullName>
        <label>New Bus Medical Goal Eligible Amount</label>
        <summarizedField>Compensation_Estimator_Product__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Goal_Eligible__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Bus_Supplemental_Goal_Eligibl_Amount__c</fullName>
        <label>New Bus Supplemental Goal Eligibl Amount</label>
        <summarizedField>Compensation_Estimator_Product__c.Total_Premium__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Supplemental</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Goal_Eligible__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Bus_Total_Dental_Commissions__c</fullName>
        <formula>New_Business_Dental_Base_Payment__c +  New_Business_Dental_Kicker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Bus Total Dental Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Bus_Total_Disability_Commissions__c</fullName>
        <formula>New_Business_Disability_Base_Payment__c +   New_Business_Disability_Kicker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Bus Total Disability Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Bus_Total_Life_Commissions__c</fullName>
        <formula>New_Business_Life_Base_Payment__c +  New_Business_Life_Kicker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Bus Total Life Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Bus_Total_Medical_Commissions__c</fullName>
        <formula>New_Business_Medical_Base_Payment__c +  New_Business_Medical_Kicker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Bus Total Medical Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Bus_Total_Supplemental_Commissions__c</fullName>
        <formula>New_Business_Supplemental_Base_Payment__c  +   New_Business_Supplemental_Kicker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Bus Total Supplemental Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Bus_Total_Vision_Commissions__c</fullName>
        <formula>New_Business_Vision_Base_Payment__c +  New_Business_Vision_Kicker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Bus Total Vision Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Bus_Vision_Goal_Eligible_Amount__c</fullName>
        <label>New Bus Vision Goal Eligible Amount</label>
        <summarizedField>Compensation_Estimator_Product__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Goal_Eligible__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Vision</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Business_Dental_Base_Payment__c</fullName>
        <label>New Business Dental Base Payment</label>
        <summarizedField>Compensation_Estimator_Product__c.Base_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Business_Dental_GTA__c</fullName>
        <formula>if ( New_Business_Dental_Goal__c = 0, 0,  New_Bus_Dental_Goal_Eligible_Amount__c / New_Business_Dental_Goal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Dental GTA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Business_Dental_Goal__c</fullName>
        <label>Dental Goal</label>
        <summarizedField>Compensation_Estimator_Goal__c.Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Included__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Goal__c.Estimation_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Business_Dental_Kicker__c</fullName>
        <formula>If(  New_Business_Dental_GTA__c = 0, 0, 

 New_Business_Dental_Base_Payment__c / New_Business_Dental_GTA__c *

If(New_Business_Dental_GTA__c &lt;= 0.8, 0,

If(New_Business_Dental_GTA__c &lt;= 1.15, (New_Business_Dental_GTA__c - 0.8)*0.5,

IF(New_Business_Dental_GTA__c &lt;= 1.5, 0.35*0.5 + (New_Business_Dental_GTA__c - 1.15)*1,

(0.35*0.5)+(0.35*1)+((New_Business_Dental_GTA__c -1.5)*1.5))
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Dental Kicker</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Business_Disability_Base_Payment__c</fullName>
        <label>New Business Disability Base Payment</label>
        <summarizedField>Compensation_Estimator_Product__c.Base_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Disability</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Business_Disability_GTA__c</fullName>
        <formula>if ( New_Business_Disability_Goal__c = 0, 0, New_Bus_Disability_Goal_Eligible_Amount__c / New_Business_Disability_Goal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Disability GTA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Business_Disability_Goal__c</fullName>
        <label>Disability Goal</label>
        <summarizedField>Compensation_Estimator_Goal__c.Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Included__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Disability</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Goal__c.Estimation_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Business_Disability_Kicker__c</fullName>
        <formula>If(  New_Business_Disability_GTA__c = 0, 0,  

  

New_Business_Disability_Base_Payment__c / New_Business_Disability_GTA__c * 

  

If(New_Business_Disability_GTA__c &lt;= 0.8, 0, 

  

If(New_Business_Disability_GTA__c &lt;= 1.15, (New_Business_Disability_GTA__c - 0.8)*0.5, 

  

IF(New_Business_Disability_GTA__c &lt;= 1.5, 0.35*0.5 + (New_Business_Disability_GTA__c - 1.15)*1, 

  

(0.35*0.5)+(0.35*1)+((New_Business_Disability_GTA__c -1.5)*1.5)) 

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Disability Kicker</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Business_Life_Base_Payment__c</fullName>
        <label>New Business Life Base Payment</label>
        <summarizedField>Compensation_Estimator_Product__c.Base_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Life</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Business_Life_GTA__c</fullName>
        <formula>if ( New_Business_Life_Goal__c = 0, 0, New_Bus_Life_Goal_Eligible_Amount__c / New_Business_Life_Goal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Life GTA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Business_Life_Goal__c</fullName>
        <label>Life Goal</label>
        <summarizedField>Compensation_Estimator_Goal__c.Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Included__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Life</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Goal__c.Estimation_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Business_Life_Kicker__c</fullName>
        <formula>If(  New_Business_Life_GTA__c = 0, 0,  

  

New_Business_Life_Base_Payment__c / New_Business_Life_GTA__c * 

  

If(New_Business_Life_GTA__c &lt;= 0.8, 0, 

  

If(New_Business_Life_GTA__c &lt;= 1.15, (New_Business_Life_GTA__c - 0.8)*0.5, 

  

IF(New_Business_Life_GTA__c &lt;= 1.5, 0.35*0.5 + (New_Business_Life_GTA__c - 1.15)*1, 

  

(0.35*0.5)+(0.35*1)+((New_Business_Life_GTA__c -1.5)*1.5)) 

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Life Kicker</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Business_Medical_Base_Payment__c</fullName>
        <label>New Business Medical Base Payment</label>
        <summarizedField>Compensation_Estimator_Product__c.Base_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Business_Medical_GTA__c</fullName>
        <formula>If( New_Business_Medical_Goal__c = 0, 0,   New_Bus_Medical_Goal_Eligible_Amount__c  / New_Business_Medical_Goal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Medical GTA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Business_Medical_Goal__c</fullName>
        <label>Medical Goal</label>
        <summarizedField>Compensation_Estimator_Goal__c.Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Included__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Goal__c.Estimation_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Business_Medical_Kicker__c</fullName>
        <formula>If(  New_Business_Medical_GTA__c = 0, 0, 

 New_Business_Medical_Base_Payment__c / New_Business_Medical_GTA__c *

If(New_Business_Medical_GTA__c &lt;= 0.8, 0,

If(New_Business_Medical_GTA__c &lt;= 1.15, (New_Business_Medical_GTA__c - 0.8)*0.5,

IF(New_Business_Medical_GTA__c &lt;= 1.5, 0.35*0.5 + (New_Business_Medical_GTA__c - 1.15)*1,

(0.35*0.5)+(0.35*1)+((New_Business_Medical_GTA__c -1.5)*1.5))

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Medical Kicker</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Business_Supplemental_Base_Payment__c</fullName>
        <label>New Business Supplemental Base Payment</label>
        <summarizedField>Compensation_Estimator_Product__c.Base_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Supplemental</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Business_Supplemental_GTA__c</fullName>
        <formula>if ( New_Business_Supplemental_Goal__c = 0, 0, New_Bus_Supplemental_Goal_Eligibl_Amount__c / New_Business_Supplemental_Goal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Supplemental GTA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Business_Supplemental_Goal__c</fullName>
        <label>Supplemental Goal</label>
        <summarizedField>Compensation_Estimator_Goal__c.Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Included__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Supplemental</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Goal__c.Estimation_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Business_Supplemental_Kicker__c</fullName>
        <formula>If(  New_Business_Supplemental_GTA__c = 0, 0,  

  

New_Business_Supplemental_Base_Payment__c / New_Business_Supplemental_GTA__c * 

  

If(New_Business_Supplemental_GTA__c &lt;= 0.8, 0, 

  

If(New_Business_Supplemental_GTA__c &lt;= 1.15, (New_Business_Supplemental_GTA__c - 0.8)*0.5, 

  

IF(New_Business_Supplemental_GTA__c &lt;= 1.5, 0.35*0.5 + (New_Business_Supplemental_GTA__c - 1.15)*1, 

  

(0.35*0.5)+(0.35*1)+((New_Business_Supplemental_GTA__c -1.5)*1.5)) 

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Supplemental Kicker</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Business_Vision_Base_Payment__c</fullName>
        <label>New Business Vision Base Payment</label>
        <summarizedField>Compensation_Estimator_Product__c.Base_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Vision</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Business_Vision_GTA__c</fullName>
        <formula>if( New_Business_Vision_Goal__c = 0, 0, New_Bus_Vision_Goal_Eligible_Amount__c / New_Business_Vision_Goal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Vision GTA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Business_Vision_Goal__c</fullName>
        <label>Vision Goal</label>
        <summarizedField>Compensation_Estimator_Goal__c.Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Included__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Vision</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Goal__c.Estimation_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Business_Vision_Kicker__c</fullName>
        <formula>If (New_Business_Vision_GTA__c = 0, 0,


New_Business_Vision_Base_Payment__c / New_Business_Vision_GTA__c *

If(New_Business_Vision_GTA__c &lt;= 0.8, 0,

If(New_Business_Vision_GTA__c &lt;= 1.15, (New_Business_Vision_GTA__c - 0.8)*0.5,

IF(New_Business_Vision_GTA__c &lt;= 1.5, 0.35*0.5 + (New_Business_Vision_GTA__c - 1.15)*1,

(0.35*0.5)+(0.35*1)+((New_Business_Vision_GTA__c -1.5)*1.5))

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Vision Kicker</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Persistency_Above_Below_Goal__c</fullName>
        <label>Persistency Above/Below Goal</label>
        <summarizedField>Compensation_Estimator_Goal__c.above_or_below_goal_del_del__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Year-End Persistency</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Goal__c.Estimation_Summary__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Persistency_Annual_Cancellations__c</fullName>
        <label>Persistency Annual Cancellations</label>
        <summarizedField>Compensation_Estimator_Goal__c.Annual_Cancellations__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Year-End Persistency</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Goal__c.Estimation_Summary__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Persistency_Annual_Renewals__c</fullName>
        <label>Persistency Annual Renewals</label>
        <summarizedField>Compensation_Estimator_Goal__c.Annual_Renewals__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Year-End Persistency</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Goal__c.Estimation_Summary__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Persistency_Bonus_Payment__c</fullName>
        <label>Year End Persistency Bonus</label>
        <summarizedField>Compensation_Estimator_Goal__c.Persistency_Bonus_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Year-End Persistency</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Goal__c.Estimation_Summary__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Persistency_Goal__c</fullName>
        <label>Persistency Goal</label>
        <summarizedField>Compensation_Estimator_Goal__c.Persistency_Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Goal__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Year-End Persistency</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Goal__c.Estimation_Summary__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refresh YTD Sold And Prorated Goal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Dental_Commission__c</fullName>
        <label>Renewal Dental Commission</label>
        <summarizedField>Compensation_Estimator_Product__c.Base_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>Renewals</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>